// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Input Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef(styled.div)
  prefix={
    Object {
      "paddingLeft": "jest-auto-snapshots String Fixture",
      "text": "jest-auto-snapshots String Fixture",
    }
  }
  size="jest-auto-snapshots String Fixture"
>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.input)
    disabled={false}
    hasError={true}
    name="jest-auto-snapshots String Fixture"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    prefix={
      Object {
        "paddingLeft": "jest-auto-snapshots String Fixture",
        "text": "jest-auto-snapshots String Fixture",
      }
    }
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <ForwardRef(styled.div)>
    <WarningIcon
      size="medium"
    />
    <ForwardRef(Styled(Text))
      hasError={true}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(Styled(Text))>
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when boolean prop "hasError" is set to: "false" 1`] = `
<ForwardRef(styled.div)
  prefix={
    Object {
      "paddingLeft": "jest-auto-snapshots String Fixture",
      "text": "jest-auto-snapshots String Fixture",
    }
  }
  size="jest-auto-snapshots String Fixture"
>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.input)
    disabled={true}
    hasError={false}
    name="jest-auto-snapshots String Fixture"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    prefix={
      Object {
        "paddingLeft": "jest-auto-snapshots String Fixture",
        "text": "jest-auto-snapshots String Fixture",
      }
    }
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <ForwardRef(styled.div)>
    <ForwardRef(Styled(Text))
      hasError={false}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(Styled(Text))>
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.div)
  prefix={
    Object {
      "paddingLeft": "jest-auto-snapshots String Fixture",
      "text": "jest-auto-snapshots String Fixture",
    }
  }
  size="jest-auto-snapshots String Fixture"
>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.input)
    disabled={true}
    hasError={true}
    name="jest-auto-snapshots String Fixture"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    prefix={
      Object {
        "paddingLeft": "jest-auto-snapshots String Fixture",
        "text": "jest-auto-snapshots String Fixture",
      }
    }
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <ForwardRef(styled.div)>
    <WarningIcon
      size="medium"
    />
    <ForwardRef(Styled(Text))
      hasError={true}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(Styled(Text))>
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.div)
  prefix={null}
  size="regular"
>
  <ForwardRef(styled.input)
    disabled={false}
    hasError={false}
    name="jest-auto-snapshots String Fixture"
    onBlur={[Function]}
    onChange={[MockFunction]}
    placeholder=""
    prefix={null}
    size="regular"
    type="text"
  />
</ForwardRef(styled.div)>
`;
